--- a/.gitignore
+++ b/.gitignore
@@ -34,12 +34,12 @@ projectFilesBackup
 /core/client/tpl/hbs-tpl.js
 /core/client/assets/css
 .sass-cache/
-/core/client/assets/vendor
-/core/client/assets/sass/config.rb
-/core/client/assets/sass/layouts/config.rb
-/core/client/assets/sass/modules/config.rb
-/core/client/assets/sass/modules/bourbon
-/core/client/assets/sass/modules/bourbon/*
+#/core/client/assets/vendor
+#/core/client/assets/sass/config.rb
+#/core/client/assets/sass/layouts/config.rb
+#/core/client/assets/sass/modules/config.rb
+#/core/client/assets/sass/modules/bourbon
+#/core/client/assets/sass/modules/bourbon/*
 /core/server/data/export/exported*
 /docs
 /_site
@@ -57,10 +57,10 @@ CHANGELOG.md
 # Casper generated files
 /core/test/functional/*.png
 
-config.js
+#config.js
 
 # Built asset files
-/core/built
+#/core/built
 
 # Coverage reports
 coverage.html
